<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@android:drawable/ic_menu_myplaces"
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile"/>
        <item
            android:icon="@android:drawable/ic_menu_preferences"
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"/>
        <item
            android:icon="@android:drawable/ic_menu_sort_alphabetically"
            android:id="@+id/nav_language"
            android:title="@string/nav_language"/>
        <item
            android:icon="@android:drawable/ic_lock_power_off"
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout"/>
    </group>
</menu>
